--- a/static/gadgets/FITSViewer.html
+++ b/static/gadgets/FITSViewer.html
@@ -71,7 +71,7 @@ var coordOptions = { decSex: false,
 myFields = {};
 
 gadget.init = function(callback){
-	gadget.dashboard.bind('dataSetChanged', updateDataSetList);
+	gadget.onNotification('dataSetChanged', updateDataSetList);
 	callback();
 }
 
@@ -111,7 +111,7 @@ function setSelectedColor(obj) {
 	}
 	var ds = gadget.dashboard.getDataSet(getSelectedDataset());
 	ds.setRecordsMetaData({'color': useColor}, obj.modifiedPointIds); 
-	gadget.dashboard.trigger('dataSetChanged');
+	gadget.notify('dataSetChanged');
 	return;
 }
 
