--- a/static/gadgets/histogramView.html
+++ b/static/gadgets/histogramView.html
@@ -15,7 +15,7 @@
 <script type="text/javascript">
 
 gadget.init = function(callback){	
-  gadget.dashboard.bind('dataSetChanged', updateDataSetList);
+  gadget.onNotification('dataSetChanged', updateDataSetList);
   callback();
 }
 
@@ -60,7 +60,7 @@ function setSelectedColor(obj) {
 	}
 	var ds = gadget.dashboard.getDataSet(getSelectedDataset());
 	ds.setRecordsMetaData({'color': useColor}, obj.modifiedPointIds);
-   gadget.dashboard.trigger('dataSetListChanged');
+   gadget.notify('dataSetListChanged');
 	return;
 }
 	
