--- a/static/gadgets/dataSetSelector.html
+++ b/static/gadgets/dataSetSelector.html
@@ -15,7 +15,7 @@
 
 // Creates gadget object
 gadget.init = function(callback){
-  gadget.dashboard.bind('dataSetChanged', updateDataSetList); 
+  gadget.onNotification('dataSetChanged', updateDataSetList); 
   callback();
 }
 
@@ -78,30 +78,29 @@ function createDataSetColorsList(dataSet) {
   // for each color, make a checkbox and name
   for (var i=0, len=colorList.length; i<len; i++) {
     var color = colorList[i];
-    var checkBoxVisibility = document.createElement("input");
-    checkBoxVisibility.type = "checkbox";
-    checkBoxVisibility.id = "ckVis_" + dataSetId + "_" + color;
-    colorRecords = dataSet.getIndex('color')[color]; 
-    if(colorRecords.length != 0){
-      checkBoxVisibility.checked = dataSet.getRecordMetaData(colorRecords[0]).visible;
+    if(dataSet.getIndexEntries('color',color).length > 0){
+      var checkBoxVisibility = document.createElement("input");
+      checkBoxVisibility.type = "checkbox";
+      checkBoxVisibility.id = "ckVis_" + dataSetId + "_" + color;
+      colorRecords = dataSet.getIndex('color')[color]; 
+      if(colorRecords.length != 0){
+        checkBoxVisibility.checked = dataSet.getRecordMetaData(colorRecords[0]).visible;
+      }
+      else{
+        checkBoxVisibility.checked = true;
+      }
+      checkBoxVisibility.value = color;
+      checkBoxVisibility.onclick = function() {
+        toggleDataSetColorVisibility(dataSetId, this.value, this.checked);
+      }
+      subDiv.appendChild(checkBoxVisibility);     
+      // create the color name span
+      var colorSpan = document.createElement("span");
+      colorSpan.style.marginRight = "8px";
+      colorSpan.innerHTML = color == 'grey' || color == ''? 'unselected': color;
+      colorSpan.innerHTML += " (" + dataSet.getIndexEntries('color',color).length + ")";
+      subDiv.appendChild(colorSpan);
     }
-    else{
-      checkBoxVisibility.checked = true;
-    }
-    checkBoxVisibility.value = color;
-    checkBoxVisibility.onclick = function() {
-      toggleDataSetColorVisibility(dataSetId, this.value, this.checked);
-    }
-    subDiv.appendChild(checkBoxVisibility);     
-    // create the color name span
-    var colorSpan = document.createElement("span");
-    colorSpan.style.marginRight = "8px";
-    colorSpan.innerHTML = color == 'grey'? 'unselected': color;
-    if (color === "") {
-      colorSpan.innerHTML = "default";
-    }
-    colorSpan.innerHTML += " (" + dataSet.getIndexEntries('color',color).length + ")";
-    subDiv.appendChild(colorSpan);
   }
 
   // create subset button
